--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@brinkninja/config",
-  "version": "1.10.0",
+  "version": "2.0.0-rc0",
   "dependencies": {
-    "@brinkninja/core": "^1.0.0",
-    "@brinkninja/verifiers": "^1.3.0",
-    "@brinkninja/adapters": "^1.0.0",
     "@brinkninja/1inch-adapter": "^1.0.0",
+    "@brinkninja/adapters": "^1.0.0",
+    "@brinkninja/core": "^1.0.0",
     "@brinkninja/nft-adapter": "^1.0.0",
     "@brinkninja/univ3-adapter": "^1.3.0",
+    "@brinkninja/verifiers": "^1.4.0",
+    "@brinkninja/verifiers-v2": "^1.2.0",
+    "ethers": "^5.7.2",
     "lodash": "^4.17.21"
   },
   "description": "Configuration data for Brink deployments",
