--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@brinkninja/adapters": "^1.0.0",
     "@brinkninja/core": "^1.0.0",
     "@brinkninja/strategies": "^0.2.4",
+    "@brinkninja/strategy-adapters": "^0.1.0",
     "@brinkninja/nft-adapter": "^1.0.0",
     "@brinkninja/univ3-adapter": "^1.3.0",
     "@brinkninja/verifiers": "^1.4.0",
