--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "@brinkninja/config",
   "version": "2.8.0",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc --outDir dist"
+  },
   "dependencies": {
     "@brinkninja/1inch-adapter": "^1.0.0",
     "@brinkninja/adapters": "^1.0.0",
     "@brinkninja/core": "^1.0.0",
+    "@brinkninja/nft-adapter": "^1.0.0",
     "@brinkninja/strategies": "^0.2.4",
     "@brinkninja/strategy-adapters": "^0.1.0",
-    "@brinkninja/nft-adapter": "^1.0.0",
     "@brinkninja/univ3-adapter": "^1.3.0",
     "@brinkninja/verifiers": "^1.4.0",
     "@brinkninja/verifiers-v2": "^1.3.0",
@@ -16,5 +20,11 @@
   },
   "description": "Configuration data for Brink deployments",
   "author": "brink.trade",
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "devDependencies": {
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^20.2.3",
+    "typescript": "^5.0.4",
+    "abitype": "^0.8.4"
+  }
 }
