--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@brinkninja/config",
-  "version": "2.9.0-alpha.2",
+  "version": "2.9.1",
   "main": "dist/index.js",
   "dependencies": {
     "@brinkninja/1inch-adapter": "^1.0.0",
