--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@brinkninja/config",
-  "version": "2.9.1",
-  "main": "dist/index.js",
+  "version": "2.9.2",
+  "main": "index.js",
   "dependencies": {
     "@brinkninja/1inch-adapter": "^1.0.0",
     "@brinkninja/adapters": "^1.0.0",
