--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@brinkninja/config",
-  "version": "2.13.0",
+  "version": "2.14.0",
   "main": "index.js",
   "dependencies": {
     "@brinkninja/1inch-adapter": "^1.0.0",
@@ -9,6 +9,7 @@
     "@brinkninja/nft-adapter": "^1.0.0",
     "@brinkninja/strategies": "^0.3.4",
     "@brinkninja/strategy-adapters": "^0.1.0",
+    "@brinkninja/intents": "^0.4.0",
     "@brinkninja/univ3-adapter": "^1.3.0",
     "@brinkninja/verifiers": "^1.4.0",
     "@brinkninja/verifiers-v2": "^1.3.0",
